--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_native_splash: ^2.3.7
+  flutter_screenutil: ^5.9.3
+  flutter_svg: ^2.0.10+1
   freezed: ^2.5.2
   freezed_annotation: ^2.4.1
   get_it: ^7.6.7
@@ -63,7 +65,8 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/images/
+    - assets/fonts/
     # - lib/myfile1.txt
     # - lib/myfile.txt
   #   - images/a_dot_ham.jpeg
@@ -76,11 +79,33 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
+  # GentiumPlus-Bold
+  
+  fonts:
+    - family: GentiumPlus
+      fonts:
+        - asset: assets/fonts/GentiumPlus-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/GentiumPlus-BoldItalic.ttf
+          weight: 700
+        - asset: assets/fonts/GentiumPlus-Regular.ttf
+          weight: 500
+        - asset: assets/fonts/GentiumPlus-Italic.ttf
+          weight: 500
   # fonts:
-  #   - family: Schyler
+  #   - family: GentiumPlus
   #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  #       - asset: assets/fonts/GentiumPlus-Bold-Regular.ttf
+  #       - asset: assets/fonts/GentiumPlus-Bold-Bold.ttf
+  #       - asset: assets/fonts/GentiumPlus-BoldItalic.ttf
+  #       - asset: assets/fonts/GentiumPlus-Italic.ttf
+  # fonts:
+  #   - family: Inter
+  #     fonts:
+  #       - asset: fonts/Inter-Regular.ttf
+  #       - asset: fonts/Inter-Bold.ttf
+  #       - asset: fonts/Inter-Medium.ttf
+  #       - asset: fonts/Inter-Light.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
