--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  animate_do: ^3.3.4
   bloc: ^8.1.4
+  build_runner: ^2.4.9
   connectivity_plus: ^5.0.2
   cupertino_icons: ^1.0.2
   dio: ^5.4.3+1
@@ -47,6 +49,7 @@ dependencies:
   intl: ^0.18.1
   json_annotation: ^4.9.0
   json_serializable: ^6.8.0
+  pretty_dio_logger: ^1.3.1
   retrofit: ^4.1.0
   retrofit_generator: ^8.1.0
 
@@ -80,7 +83,6 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   # GentiumPlus-Bold
-  
   fonts:
     - family: GentiumPlus
       fonts:
