--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,12 +46,14 @@ dependencies:
   freezed_annotation: ^2.4.1
   get_it: ^7.6.7
   http: ^1.1.0
-  intl: ^0.18.1
+  intl: ^0.19.0
   json_annotation: ^4.9.0
   json_serializable: ^6.8.0
   pretty_dio_logger: ^1.3.1
   retrofit: ^4.1.0
   retrofit_generator: ^8.1.0
+  shared_preferences: ^2.2.3
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_lints: ^4.0.0
