--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   retrofit_generator: ^8.1.0
   shared_preferences: ^2.2.3
   shimmer: ^3.0.0
+  skeletonizer: ^1.4.2
   win32: ^5.5.4
 
 dev_dependencies:
